--- a/app/src/main/res/layout/customview_edittext.xml
+++ b/app/src/main/res/layout/customview_edittext.xml
@@ -6,12 +6,12 @@
     <TextView
         android:id="@+id/custom_edittext_label"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight=".50"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:text=""
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@android:color/black" />
 
     <EditText
@@ -21,7 +21,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_marginTop="5dp"
+        android:layout_marginRight="10dp"
         android:inputType="text"
+        android:background="@drawable/edittext_state"
         android:text="" />
 
 </LinearLayout>
