--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="white">#ffffff</color>
     <color name="lightGray">#dcdcdc</color>
     <color name="btnColor">#ff8b33</color>
+    <color name="borderColor">#8511b3</color>
 </resources>
