--- a/app/src/main/res/layout/fragment_plan.xml
+++ b/app/src/main/res/layout/fragment_plan.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
@@ -27,6 +29,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/plan_scroll_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -193,34 +196,15 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
 
-            <LinearLayout
+            <id.co.myrepublic.salessupport.widget.CustomEditText
+                android:id="@+id/plan_editText_remarks"
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:orientation="horizontal">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                app:inputType="textMultiline"
+                app:inputHeight="100dp"
+                app:labelText="@string/fragment_plan_remarks" />
 
-                <TextView
-                    android:id="@+id/plan_txt_remarks"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight=".50"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/fragment_plan_remarks"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:textColor="@android:color/black" />
-
-                <EditText
-                    android:id="@+id/plan_editText_remarks"
-                    android:layout_width="match_parent"
-                    android:layout_height="120dp"
-                    android:layout_weight=".50"
-                    android:ems="10"
-                    android:gravity="top"
-                    android:inputType="text|textMultiLine"
-                    android:text="" />
-
-
-            </LinearLayout>
 
             <Button
                 android:id="@+id/plan_btn_confirm"
