--- a/app/src/main/res/layout/row_item_common.xml
+++ b/app/src/main/res/layout/row_item_common.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rowitem_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -8,7 +9,6 @@
         android:id="@+id/rowitem_maintext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:text=""
         android:layout_marginLeft="5dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
