Add customSpinner widget

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,14 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <id.co.myrepublic.salessupport.widget.CustomSpinner
+            android:id="@+id/test_spinner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:entries="@array/customer_class_arrays"
+            app:validator="required"
+            app:labelText="@string/fragment_sales_agent_code" />
+
         <ImageView
             android:id="@+id/content_main_image_logo"
             android:layout_width="match_parent"
