--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,12 +3,14 @@
     <declare-styleable name="appAttr">
         <attr name="validator" format="string"/>
         <attr name="labelText" format="string" />
-        <attr name="inputType" format="string" />
+        <attr name="inputType" format="string"/>
         <attr name="clickable" format="boolean" />
         <attr name="dateFormat" format="string" />
         <attr name="inputHeight" format="dimension" />
         <attr name="value" format="string" />
         <attr name="inputHint" format="string" />
         <attr name="enabled" format="boolean" />
+        <attr name="selectedItem" format="integer" />
+        <attr name="android:entries"/>
     </declare-styleable>
 </resources>
