--- a/app/src/main/res/layout/customview_spinner.xml
+++ b/app/src/main/res/layout/customview_spinner.xml
@@ -5,11 +5,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/custom_spinner_label"
+            android:id="@+id/custom_widget_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".50"
@@ -26,6 +26,7 @@
             android:background="@drawable/spinner_bg"
             android:layout_weight=".50"
             android:paddingBottom="10dp"
+            android:gravity="center_vertical"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
