--- a/app/src/main/res/layout/customview_spinner.xml
+++ b/app/src/main/res/layout/customview_spinner.xml
@@ -15,6 +15,7 @@
             android:layout_weight=".50"
             android:layout_marginLeft="10dp"
             android:text="label"
+            android:gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@android:color/black" />
 
