Fix view API < 20, use customwidget for spinner

--- a/app/src/main/res/layout/dialog_addcompetitor.xml
+++ b/app/src/main/res/layout/dialog_addcompetitor.xml
@@ -19,7 +19,7 @@
         android:layout_width="300dp"
         android:spinnerMode="dropdown"
         android:layout_gravity="center"
-        android:background="@drawable/spinner_bg"
+        style="@style/SpinnerTheme"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
