--- a/app/src/main/res/drawable/spinner_bg.xml
+++ b/app/src/main/res/drawable/spinner_bg.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item>
-        <color android:color="@color/lightGray" />
-    </item>
-    <item android:gravity="center_vertical|right" android:right="8dp">
+
         <layer-list>
-            <item android:width="12dp" android:height="12dp" android:gravity="center" android:bottom="10dp">
-                <rotate
-                    android:fromDegrees="45"
-                    android:toDegrees="45">
-                    <shape android:shape="rectangle">
-                        <solid android:color="#666666" />
-                        <stroke android:color="#aaaaaa" android:width="1dp"/>
-                    </shape>
-                </rotate>
+
+            <item>
+                <shape>
+                    <gradient android:angle="90" android:endColor="@color/white" android:startColor="@color/lightGray" android:type="linear" />
+
+                    <stroke android:width="0.33dp" android:color="@color/borderColor" />
+
+                    <corners android:radius="0dp" />
+
+                    <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
+                </shape>
             </item>
-            <item android:width="30dp" android:height="10dp" android:bottom="21dp" android:gravity="center">
-                <color android:color="@color/lightGray" />
+
+            <item android:right="5dp">
+
+                <bitmap android:gravity="center_vertical|right" android:src="@mipmap/arrowdropdown" />
+
             </item>
+
         </layer-list>
+
     </item>
-</layer-list>
+
+</selector>
