--- a/app/src/main/res/layout/customview_spinner.xml
+++ b/app/src/main/res/layout/customview_spinner.xml
@@ -11,7 +11,7 @@
         <TextView
             android:id="@+id/custom_widget_label"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight=".50"
             android:layout_marginLeft="10dp"
             android:text="label"
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:spinnerMode="dropdown"
             android:layout_marginRight="10dp"
-            android:background="@drawable/spinner_bg"
+            style="@style/SpinnerTheme"
             android:layout_weight=".50"
             android:paddingBottom="10dp"
             android:gravity="center_vertical"
