--- a/app/src/main/res/layout/fragment_customer_profile.xml
+++ b/app/src/main/res/layout/fragment_customer_profile.xml
@@ -34,37 +34,14 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <id.co.myrepublic.salessupport.widget.CustomSpinner
+                android:id="@+id/customer_spinner_salutation"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:entries="@array/salutation_arrays"
+                app:labelText="@string/fragment_customer_salutation" />
 
-
-                <TextView
-                    android:id="@+id/customer_txt_salutation"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".50"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/fragment_customer_salutation"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@android:color/black" />
-
-                <Spinner
-                    android:id="@+id/customer_spinner_salutation"
-                    android:layout_width="match_parent"
-                    android:layout_weight=".50"
-                    android:spinnerMode="dropdown"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/spinner_bg"
-                    android:layout_marginTop="5dp"
-                    android:paddingBottom="10dp"
-                    android:entries="@array/salutation_arrays"
-                    android:layout_height="wrap_content" />
-
-
-            </LinearLayout>
 
             <id.co.myrepublic.salessupport.widget.CustomEditText
                 android:id="@+id/customer_txt_full_name"
@@ -84,35 +61,14 @@
                 app:validator="required"
                 app:labelText="@string/fragment_customer_prefered_name" />
 
-            <LinearLayout
+            <id.co.myrepublic.salessupport.widget.CustomSpinner
+                android:id="@+id/customer_spinner_nationality"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:orientation="horizontal">
+                android:entries="@array/nationality_arrays"
+                app:labelText="@string/fragment_customer_nationality" />
 
-
-                <TextView
-                    android:id="@+id/customer_txt_nationality"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".50"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/fragment_customer_nationality"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@android:color/black" />
-
-                <Spinner
-                    android:id="@+id/customer_spinner_nationality"
-                    android:layout_width="match_parent"
-                    android:layout_weight=".50"
-                    android:spinnerMode="dropdown"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/spinner_bg"
-                    android:paddingBottom="10dp"
-                    android:entries="@array/nationality_arrays"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
 
             <id.co.myrepublic.salessupport.widget.CustomEditText
                 android:id="@+id/customer_editText_id_type"
@@ -133,34 +89,13 @@
                 app:dateFormat="MM/dd/yyyy"
                 app:labelText="@string/fragment_customer_dob" />
 
-            <LinearLayout
+            <id.co.myrepublic.salessupport.widget.CustomSpinner
+                android:id="@+id/customer_spinner_gender"
                 android:layout_width="match_parent"
-                android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/customer_txt_gender"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight=".50"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/fragment_customer_gender"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textColor="@android:color/black" />
-
-                <Spinner
-                    android:id="@+id/customer_spinner_gender"
-                    android:layout_width="match_parent"
-                    android:layout_weight=".50"
-                    android:spinnerMode="dropdown"
-                    android:layout_marginRight="10dp"
-                    android:background="@drawable/spinner_bg"
-                    android:paddingBottom="10dp"
-                    android:entries="@array/gender_arrays"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
+                android:layout_marginTop="10dp"
+                android:entries="@array/gender_arrays"
+                app:labelText="@string/fragment_customer_gender" />
 
             <id.co.myrepublic.salessupport.widget.CustomEditText
                 android:id="@+id/customer_editText_email"
